Time: 1 ms (87.89%) | Memory: 43.8 MB (95.58%) - LeetSync